[workspace]
members = [".", "ui", "api"]

[package]
name = "grey"
version = "0.1.0"
edition = "2021"
description = "A lightweight tool for checking the health of online services and reporting this to a monitoring system."

[[bin]]
name = "grey"
path = "./src/main.rs"

[dependencies]
grey-ui = { path = "ui", default-features = false, features = ["ssr"] }
grey-api = { path = "api" }

# Server dependencies
actix-web = "4.11"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.7"
boa_engine = { git = "https://github.com/boa-dev/boa", optional = true }
boa_gc = { git = "https://github.com/boa-dev/boa", optional = true }
boa_runtime = { git = "https://github.com/boa-dev/boa", optional = true, features = ["reqwest-blocking"] }
futures = "0.3"
futures-concurrency = "7.6.3"
futures-lite = "2.6.1"
http = "1.3.1"
humantime = "2.2.0"
humantime-serde = "1.1.1"
include_dir = "0.7"
lazy_static = "1.5"
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls-webpki-roots"] }
serde_yaml = "0.9"
tonic = { version = "0.12", features = ["tls"] }
tonic-health = "0.12"
tokio = { version = "1", features = [
  "fs",
  "macros",
  "net",
  "rt",
  "time",
  "tracing",
] }
tracing = "0.1.41"
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = ["medama", "opentelemetry"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }

# Shared dependencies
chrono = { version = "0.4.38", features = ["serde"] }
circular-buffer = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = { version = "0.21", features = ["ssr", "hydration"] }
sys_traits = { version = "0.1.17", features = ["memory"] }


[features]
default = ["scripts"]
pure_tests = []
scripts = ["dep:boa_engine", "dep:boa_gc", "dep:boa_runtime"]
openssl_src = ["dep:openssl-sys"]

[build-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["fs", "macros", "net", "rt", "time", "tracing"] }

[dev-dependencies]
tempfile = "3.21"

[profile.release]
debug = 1
strip = "debuginfo"
opt-level = "z"
lto = true

