[workspace]
members = ["agent", "ui", "api"]
resolver = "3"

[workspace.package]
version = "0.1.0"
description = "A lightweight tool for checking the health of online services and reporting this to a monitoring system."
documentation = "https://grey.sierrasoftworks.com"
readme = "README.md"

[workspace.dependencies]
grey-api = { path = "api" }
grey-ui = { path = "ui", default-features = false }

# Shared dependencies
chrono = { version = "0.4.38", features = ["serde"] }
humantime = "2.2.0"
humantime-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = { version = "0.21", features = ["ssr"] }
sys_traits = { version = "0.1.17", features = ["memory"] }
gethostname = "1.0.2"

# UI dependencies
gloo = { version = "0.11" }
gloo-console = { version = "0.3" }
gloo-net = { version = "0.6" }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"

# Server dependencies
aes-gcm = "0.10.3"
actix-web = "4.11"
async-trait = "0.1"
base64 = "0.22.1"
circular-buffer = "1.1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4.7"
boa_engine = { git = "https://github.com/boa-dev/boa" }
boa_gc = { git = "https://github.com/boa-dev/boa" }
boa_runtime = { git = "https://github.com/boa-dev/boa", features = ["reqwest-blocking"] }
futures = "0.3"
futures-concurrency = "7.6.3"
futures-lite = "2.6.1"
http = "1.3.1"
include_dir = "0.7"
lazy_static = "1.5"
openssl-sys = { version = "0.9", features = ["vendored"] }
radix_fmt = "1.0.0"
rand = "0.9"
redb = { version = "3.0.1" }
rmp-serde = "1.3.0"
reqwest = { version = "0.12", features = ["rustls-tls-webpki-roots"] }
serde_yaml = "0.9"
tonic = { version = "0.14", features = ["tls-webpki-roots", "tls-native-roots"] }
tonic-health = "0.14"
tokio = { version = "1", features = [
  "fs",
  "macros",
  "net",
  "rt",
  "time",
  "tracing",
] }
tracing = "0.1.41"
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = ["medama", "opentelemetry"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }

# Test dependencies
tempfile = "3.21"

[profile.release]
debug = 1
strip = "debuginfo"
opt-level = "z"
lto = true

