[workspace]
default-members = ["agent"]
members = ["agent", "api", "ui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
description = "A lightweight tool for checking the health of online services and reporting this to a monitoring system."
documentation = "https://grey.sierrasoftworks.com"
readme = "README.md"

[workspace.dependencies]
grey-api = { path = "api" }
grey-ui = { path = "ui", default-features = false }

actix-web = "4.11"
aes-gcm = "0.10.3"
async-trait = "0.1"
base64 = "0.22.1"
boa_engine = { git = "https://github.com/boa-dev/boa" }
boa_gc = { git = "https://github.com/boa-dev/boa" }
boa_runtime = { git = "https://github.com/boa-dev/boa", features = [
  "reqwest-blocking",
] }
chrono = { version = "0.4.42", features = ["serde"] }
circular-buffer = "1.2.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5.0"
futures = "0.3"
futures-concurrency = "7.6.3"
futures-lite = "2.6.1"
gethostname = "1.0.2"
http = "1.3.1"
humantime = "2.2.0"
humantime-serde = "1.1.1"
include_dir = "0.7"
lazy_static = "1.5"
openssl-sys = { version = "0.9", features = ["vendored"] }
radix_fmt = "1.0.0"
rand = "0.9"
redb = { version = "3.0.1" }
reqwest = { version = "0.12", features = ["rustls-tls-webpki-roots"] }
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sys_traits = { version = "0.1.17", features = ["memory"] }
tokio = { version = "1", features = [
  "fs",
  "macros",
  "net",
  "rt",
  "time",
  "tracing",
] }
tonic = { version = "0.14", features = [
  "tls-webpki-roots",
  "tls-native-roots",
] }
tonic-health = "0.14"
tracing = "0.1.41"
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = [
  "medama",
  "opentelemetry",
] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
yew = { version = "0.21", features = ["ssr"] }

gloo = { version = "0.11" }
gloo-console = { version = "0.3" }
gloo-net = { version = "0.6" }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4" }
wasm-logger = { version = "0.2" }
web-sys = { version = "0.3" }

# Test dependencies
tempfile = "3.22"

[profile.release]
debug = 1
strip = "debuginfo"
opt-level = "z"
lto = true
