[package]
name = "grey-ui"
edition = "2024"
version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true

[[bin]]
name = "grey-ui"
path = "./src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grey-api = { path = "../api" }
chrono = { workspace = true, features = ["wasmbind"] }
circular-buffer = { workspace = true }
gloo = { workspace = true, optional = true }
gloo-console = { workspace = true, optional = true }
gloo-net = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }
humantime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
yew = { workspace = true, features = ["hydration"] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wasm-logger = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
default = ["wasm"]
ssr = []
wasm = ["gloo", "gloo-console", "gloo-net", "gloo-timers", "wasm-bindgen", "wasm-bindgen-futures", "wasm-logger", "web-sys"]
