[package]
name = "grey-ui"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "grey-ui"
path = "./src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grey-api = { path = "../api" }

chrono = { workspace = true, features = ["wasmbind"] }
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
yew = { workspace = true, features = ["ssr", "hydration"] }

gloo = { workspace = true, optional = true }
gloo-console = { workspace = true, optional = true }
gloo-net = { workspace = true, optional = true }
gloo-timers = { workspace = true, features = ["futures"], optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wasm-logger = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
default = ["wasm"]
ssr = []
wasm = ["gloo", "gloo-console", "gloo-net", "gloo-timers", "wasm-bindgen", "wasm-bindgen-futures", "wasm-logger", "web-sys"]
